# seguid-python

./: .buildinfo  .gitignore  .gitmodules  CNAME  LICENSE.txt  Makefile  README.md  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.github/workflows/: R-CMD-check.yaml  check-cli.yml  check-python.yml  check-r.yaml  check-r.yml  publish-docs.yml  pypi_build_publish.yml  seguid-tests.yml  test-coverage.yml
_modules/: index.html
_modules/seguid/: _chksum.html  asserts.html  chksum.html  config.html  manip.html  reprutils.html  tables.html
_sources/: index.rst.txt
docs/: conf.py  how-to-build-docs-for-python.md  index.rst  tests.rst
docs/_build/doctrees/: environment.pickle  index.doctree  seguid.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/seguid/: asserts.html  chksum.html  config.html  manip.html  reprutils.html
docs/_static/: seguid-figure.odp
seguid-tests/: Makefile  README.md
seguid-tests/.github/workflows/: check-cli-javascript.yml  check-cli-python.yml  check-cli-r.yml
seguid-tests/tests/: 01.cli-help.bats  20.seguid-v1.bats  40.seguid-v2.bats  60.alphabets-custom.bats  70.alphabets-built-in.bats  80.locales.bats  90.exceptions.bats
src/seguid/: __init__.py  __main__.py  _asserts.py  _chksum.py  _manip.py  _reprutils.py  asserts.py  chksum.py  config.py  manip.py  reprutils.py  tables.py
tests/: cli.bats  test_asserts.py  test_chksum.py  test_manip.py  test_parse_sequence_string.py  test_performance.py  test_readme.py  test_reprutils.py  test_tables.py
tests/test_data/: M13.txt  M13_minimal_rotation.txt  README.txt  pUC19.txt  pUC19_minimal_rotation_watson_linebreak_crick.txt
