[tool.poetry]
name = "seguid"
version = "0.1.0a01"
description = "Sequence Globally Unique Identifier (SEGUID) Checksums for Linear, Circular, Single-Stranded and Double-Stranded Biological Sequences"
authors = [
  "Bjorn Johansson <bjornjobb@gmail.com>",
  "Henrik Bengtsson",
  "Louis Abraham"
]
license = "MIT"
readme = "README.md"
documentation = "https://seguid-python.seguid.org"
homepage = "https://github.com/seguid/seguid-python?tab=readme-ov-file#seguid-v2-checksums-for-linear-circular-single--and-double-stranded-biological-sequences"
repository = "https://github.com/seguid/seguid-python"

[tool.poetry.dependencies]
python = ">=3.6, <4.0"
pydivsufsort = { version = "^0.0.14", optional = true }
setuptools = [
  {version = "<=69.0.3", python = "<3.8"},
  {version = "<=59.6.0", python = "<3.7"},
]

[tool.poetry.extras]
pydivsufsort =  ["pydivsufsort"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
