[tool.poetry]
name = "seguid"
version = "0.2.1"
description = "Sequence Globally Unique Identifier (SEGUID) Checksums for Linear, Circular, Single-Stranded and Double-Stranded Biological Sequences"
authors = [
  "Bjorn Johansson <bjornjobb@gmail.com>",
  "Henrik Bengtsson",
  "Louis Abraham"
]
license = "MIT"
readme = "README.md"
documentation = "https://seguid-python.seguid.org"
homepage = "https://www.seguid.org"
repository = "https://github.com/seguid/seguid-python"
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/seguid/seguid-python/issues"
[tool.poetry.dependencies]
python = ">=3.6, <4.0"
pydivsufsort = [
  {version = ">=0.0.18", python = ">=3.9", optional = true},
  {version = "<=0.0.14", python = "<3.9", optional = true},
]
setuptools = [
  {version = "<=69.0.3", python = "<3.8"},
  {version = "<=59.6.0", python = "<3.7"},
]

[tool.poetry.extras]
pydivsufsort =  ["pydivsufsort"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
